# unibo_aule

./: .gitignore  README.md  api.py  aula.py  aule.py  calendario.py  entrypoint.sh  main.py  pyproject.toml
.github/: dependabot.yml
