[tool.poetry]
name = "aule_unibo"
version = "0.1.0"
description = ""
authors = ["VaiTon <eyadlorenzo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^13.14"
requests = "^2.28.1"
python-dateutil = "^2.8.2"
tzlocal = "^4.2"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
